# runtime_function_composer_ffi

./: .gitignore  CMakeLists.txt  README.md  main.c
asm_frags/: frags.asm
fragments/: arg_resolver.asm  epilogue.asm  fib_arg_resolver.asm  fibo_retval_resolver.asm  prologue.asm  test_adder.asm
performance_test/: rfc_fibonacci.c  rfc_fibonacci.h  rfc_mujs_fibonacci.c  rfc_mujs_fibonacci.h  rfc_stub.c  rfc_stub.h  timing.c  timing.h
performance_test/js_src/: fibonacci.js
rfc/: fragment.c  fragment.h  fragment_registry.h  fsio.c  fsio.h  rfc.h  template_parser.c  template_parser.h
timing.h/: performance_eval.h
